--- a/app/src/main/res/layout/main_questions.xml
+++ b/app/src/main/res/layout/main_questions.xml
@@ -146,7 +146,7 @@
                         android:id="@+id/answerText3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Задолжность можно сдать следующим образом - нужно получить хвостовку в деканате, её выдаст вам методист, далее нужно договориться с преподователем о пересдаче. После успешной пересдаче предмета преподаватель отнесет вашу хвостовку в деканат и вас запишут в ведомость."
+                        android:text="Задолжность можно сдать следующим образом - нужно получить хвостовку в деканате, её выдаст вам методист, далее нужно договориться с преподавателем о пересдаче. После успешной пересдаче предмета преподаватель отнесет вашу хвостовку в деканат и вас запишут в ведомость."
                         android:visibility="gone"
                         android:paddingTop="8dp"
                         android:textColor="@color/text_light"
