--- a/app/src/main/res/layout/settings_theme_selection.xml
+++ b/app/src/main/res/layout/settings_theme_selection.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Settings.ThemeSelectionActivity">
+    tools:context=".Settings.ThemeSelectionActivity"
+    android:fitsSystemWindows="true">
+
 
     <!-- Верхняя шапка -->
     <androidx.constraintlayout.widget.ConstraintLayout
