--- a/app/src/main/res/layout/activity_employee_detail.xml
+++ b/app/src/main/res/layout/activity_employee_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_light">
+    android:background="@color/background_light"
+    android:fitsSystemWindows="true">
 
     <!-- Верхняя шапка -->
     <androidx.constraintlayout.widget.ConstraintLayout
